Replace java.net.URI with wiremock-url library